--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,9 @@ services:
     plan: free
     buildCommand: "pip install -r requirements.txt"
     startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
+    envVars:
+      - key: PORT
+        value: "8000"  # Ensures a default port if Render does not provide one
+      - key: SECRET_KEY
+        generateValue: true  # Securely generate a unique secret key on Render
     autoDeploy: true
-
